# synthphone_vocals

./: CONFIGURATION_GUIDE.md  CONTRIBUTING.md  Cargo.toml  EMBEDDED_README.md  EMBEDDED_TROUBLESHOOTING.md  LICENSE  README.md  clippy.toml  readme.md  rustfmt.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: benchmark.yml  ci.yml  security.yml
examples/: Cargo.toml.example  basic_autotune.rs  basic_vocal_effects.rs  daisy_seed_example.rs  daisy_seed_realtime.rs  vocal_effects_config_demo.rs  vocode_and_dry_demo.rs
src/: config.rs  core.rs  embedded.rs  embedded_core.rs  embedded_realtime.rs  error.rs  fade.rs  fft_config.rs  frequencies.rs  hann_window.rs  keys.rs  lib.rs  normal_phase_advance.rs  oscillator.rs  process_frequencies.rs  process_vocal_effects.rs  process_vocal_effects_core.rs  ring_buffer.rs  state.rs  vocal_effects.rs  vocal_effects_config.rs
src/audio/: keys.rs  mod.rs  oscillator.rs
src/dsp/: fft.rs  frequency_analysis.rs  mod.rs  signal_processing.rs  windowing.rs
src/effects/: mod.rs
src/examples/: daisy_seed_autotune.rs  desktop_file_processing.rs  dynamic_fft_example.rs  embedded_basic.rs
src/fft/: mod.rs
src/tests/: integration_tests.rs
src/utils/: math.rs  mod.rs  signal.rs
