[package]
name = "synthphone_vocals"
version = "0.1.0"
edition = "2024"
description = "Real-time autotune library for embedded and desktop applications"
license = "MIT"
documentation = "https://docs.rs/autotune"
keywords = ["audio", "dsp", "autotune", "embedded", "real-time"]
categories = ["multimedia::audio", "embedded", "no-std"]
readme = "README.md"

[features]
default = ["embedded"]
std = []
embedded = ["cortex-m"]
desktop = ["std"]
cepstral-smoothing = []
formant-shifting = ["cepstral-smoothing"]
debug-logging = []

[dependencies]
libm = "0.2.8"
microfft = "0.6"

[dependencies.cortex-m]
version = "0.7"
optional = true

[dependencies.log]
version = "0.4"
optional = true

[dev-dependencies]
hound = "3.4"
criterion = "0.5"
approx = "0.5"

# [[bench]]
# name = "autotune_benchmark"
# harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
