[package]
name = "synthphone_vocals"
version = "0.1.1"
edition = "2024"
description = "Real-time Vocal Effects and Pitch Correction library for embedded and desktop applications"
license = "MIT"
keywords = ["audio", "dsp", "pitch-correction", "vocals", "embedded", "real-time"]
categories = ["multimedia::audio", "embedded", "no-std"]
readme = "README.md"

[features]
default = ["embedded"]
std = ["dep:critical-section"]
embedded = []
cortex-m = ["dep:cortex-m"]
cepstral-smoothing = []
formant-shifting = ["cepstral-smoothing"]
debug-logging = []

[dependencies]
libm = "0.2.8"
microfft = "0.6"

[dependencies.critical-section]
version = "1.1"
features = ["std"]
optional = true

[dependencies.cortex-m]
version = "0.7"
optional = true

[dependencies.log]
version = "0.4"
optional = true

[dev-dependencies]
hound = "3.4"
criterion = "0.5"
approx = "0.5"


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
